--- a/templates/register.html
+++ b/templates/register.html
@@ -1,12 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-    <p id="success" hidden>success</p>
-    <p id="result" hidden>{{ result }} </p>
+    <p id="success" hidden>failure</p>
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
+                <legend class="border-bottom mb-4">Join Today</legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
                     {% if form.username.errors %}
@@ -46,10 +45,6 @@
                         {{ form.phonenumber(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-                <div class="form-check">
-                    {{ form.remember(class="form-check-input") }}
-                    {{ form.remember.label(class="form-check-label") }}
-               </div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit_button(class="btn btn-outline-info") }}
@@ -58,7 +53,7 @@
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Register</a>
+            Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
         </small>
     </div>
 {% endblock content %}
